--- a/Raylib Starter Project.vcxproj
+++ b/Raylib Starter Project.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="TextureD.cpp" />
+    <ClCompile Include="TransformD.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Drawable.h" />
@@ -147,6 +148,7 @@
     <ClInclude Include="Shape.h" />
     <ClInclude Include="ShapeType.h" />
     <ClInclude Include="TextureD.h" />
+    <ClInclude Include="TransformD.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
